proxies/envoy.yaml
# file: config.yaml
static_resources:
  listeners:
    - name: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: inbound
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: localhost_3000
  clusters:
    - name: localhost_3000
      type: STATIC
      #typed_extension_protocol_options: # <-- new!
      #  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      #    "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      #    common_http_protocol_options:
      #      idle_timeout: 9s # <-- explicitly configure 4s timeout
      #    explicit_http_config:
      #      http_protocol_options: { }
      load_assignment:
        cluster_name: localhost_3000
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
